--- a/app/src/main/res/layout/random_fact_layout.xml
+++ b/app/src/main/res/layout/random_fact_layout.xml
@@ -1,45 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="factRandomViewModel"
+            type="com.akanbi.chucknorris.presenter.viewmodel.fact.random.FactRandomViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintCard"
-        android:layout_width="0dp"
-        android:layout_height="300dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/chuck_norris"
-        app:layout_constraintBottom_toTopOf="@+id/gifChuckNorris"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <WebView
-            android:id="@+id/factDescription"
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_marginStart="26dp"
-            android:layout_marginTop="213dp"
-            android:layout_marginEnd="26dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintCard"
+            android:layout_width="0dp"
+            android:layout_height="300dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/chuck_norris"
+            app:layout_constraintBottom_toTopOf="@+id/gifChuckNorris"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <WebView
+                android:id="@+id/factDescription"
+                app:loadData="@{String.valueOf(factRandomViewModel.factLiveData.factDescription)}"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_marginStart="26dp"
+                android:layout_marginTop="213dp"
+                android:layout_marginEnd="26dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" >
+
+                <ProgressBar
+                    android:id="@+id/loadingFact"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:indeterminate="true"
+                    android:visibility="@{String.valueOf(factRandomViewModel.factLiveData.factDescription)}"/>
+
+            </WebView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ImageView
+            android:id="@+id/gifChuckNorris"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="8dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constraintCard"
+            tools:srcCompat="@tools:sample/avatars" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <ImageView
-        android:id="@+id/gifChuckNorris"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="8dp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintCard"
-        tools:srcCompat="@tools:sample/avatars" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
