Renamed activity and organized file structure

--- a/app/src/main/res/layout/activity_chuck_norris_facts.xml
+++ b/app/src/main/res/layout/activity_chuck_norris_facts.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presenter.view.MainActivity">
+    tools:context=".presenter.view.ChuckNorrisFactsActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarActivity"
