--- a/app/src/main/res/layout/random_fact_layout.xml
+++ b/app/src/main/res/layout/random_fact_layout.xml
@@ -27,7 +27,6 @@
 
             <WebView
                 android:id="@+id/factDescription"
-                app:loadData="@{String.valueOf(factRandomViewModel.factLiveData.factDescription)}"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
                 android:layout_marginStart="26dp"
@@ -36,14 +35,15 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" >
+                app:layout_constraintTop_toTopOf="parent"
+                app:loadData="@{String.valueOf(factRandomViewModel.factLiveData.factDescription)}">
 
                 <ProgressBar
                     android:id="@+id/loadingFact"
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:indeterminate="true"
-                    android:visibility="@{String.valueOf(factRandomViewModel.factLiveData.factDescription)}"/>
+                    android:visibility="@{String.valueOf(factRandomViewModel.factLiveData.factDescription)}" />
 
             </WebView>
 
