Created feature of reload fact

--- a/app/src/main/res/layout/random_fact_layout.xml
+++ b/app/src/main/res/layout/random_fact_layout.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="factRandomViewModel"
-            type="com.akanbi.chucknorris.presentation.viewmodel.fact.random.FactRandomViewModel" />
+            type="com.akanbi.chucknorris.presentation.fact.random.FactRandomViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +21,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/chuck_norris"
-            app:layout_constraintBottom_toTopOf="@+id/gifChuckNorris"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -49,16 +49,24 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <ImageView
-            android:id="@+id/gifChuckNorris"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="8dp"
-            android:visibility="gone"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintGif"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:onClick="@{() -> factRandomViewModel.loadFactRandom()}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintCard"
-            tools:srcCompat="@tools:sample/avatars" />
+            app:layout_constraintTop_toBottomOf="@id/constraintCard">
+
+            <ImageView
+                android:id="@+id/reloadFact"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginTop="4dp"
+                android:src="@drawable/icon_reload"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
