--- a/app/src/main/res/layout/activity_chuck_norris_facts.xml
+++ b/app/src/main/res/layout/activity_chuck_norris_facts.xml
@@ -18,7 +18,7 @@
 
     <fragment
         android:id="@+id/fragmentRandomFact"
-        class="com.akanbi.chucknorris.presentation.viewmodel.fact.random.FactRandomFragments"
+        class="com.akanbi.chucknorris.presentation.fact.random.FactRandomFragments"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
