--- a/app/src/main/res/layout/activity_chuck_norris_facts.xml
+++ b/app/src/main/res/layout/activity_chuck_norris_facts.xml
@@ -6,25 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.view.ChuckNorrisFactsActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarActivity"
-        android:layout_width="0dp"
-        android:background="@color/colorPrimary"
-        app:titleTextColor="@color/fontColor"
-        android:layout_height="?actionBarSize"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <fragment
-        android:id="@+id/fragmentRandomFact"
-        class="com.akanbi.chucknorris.presentation.fact.random.FactRandomFragments"
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/toolbarActivity"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarActivity"
-        tools:layout="@layout/random_fact_layout" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
